base/first-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: first-deploy
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      app: first-deploy
  template:
    metadata:
      labels:
        app: first-deploy
    spec:
      containers:
        - name: first-deploy
          image: 503237308475.dkr.ecr.sa-east-1.amazonaws.com/team4bk:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 250m
            limits:
              cpu: 500m
