base/fr-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: eks-front
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: "/"
spec:
  selector:
    app: fr-fargate
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
