base/second-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: second-deploy
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: "/services/all"
spec:
  selector:
    app: second-deploy
  type: NodePort
  ports:
    - port: 8080
      targetPort: 3000
      protocol: TCP
